code25_all/python/1959210.txt
D
E
1.2345D+02
# instead of
1.2345E+02

D
>>> A = 1.0D+01
  File "<stdin>", line 1
    A = 1.0D+01
           ^
SyntaxError: invalid syntax

D
E
